profile photo update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-profile-pic" id="heroProfilePic">
-                    <img src="images/profile.jpg" alt="Vivek V - AI & Full Stack Developer" onerror="this.style.display='none'">
+                    <img src="images/profile.jpg" alt="Vivek V - AI & Full Stack Developer">
                     <a href="https://linkedin.com/in/vivek-v-a0a41225a" target="_blank" class="open-to-work-badge">
                         <i class="fas fa-briefcase"></i>
                         Open to Work
