--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Vivek V - AI & Full Stack Developer | Final Year CSE Student specializing in AI, GenAI, and Full Stack Development">
     <meta name="keywords" content="AI Developer, Full Stack Developer, Machine Learning, RAG Chatbots, Portfolio">
     <meta name="author" content="Vivek V">
-    <title>Vivek V | AI & Full Stack Developer</title>
+    <title>VIVEK V</title>
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Analytics -->
