--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="nav-right">
+                <div class="live-clock">
+                    <div class="clock-time" id="liveTime"></div>
+                    <div class="clock-date" id="liveDate"></div>
+                </div>
                 <div class="nav-social-icons">
                     <a href="https://linkedin.com/in/vivek-v-a0a41225a" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Vivek7892" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
@@ -585,6 +589,30 @@
             <i class="fas fa-phone"></i>
         </a>
     </div>
+
+    <!-- Bottom Navigation -->
+    <nav class="bottom-nav" id="bottomNav">
+        <a href="#home" class="bottom-nav-item">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="#about" class="bottom-nav-item">
+            <i class="fas fa-user"></i>
+            <span>About</span>
+        </a>
+        <a href="#skills" class="bottom-nav-item">
+            <i class="fas fa-code"></i>
+            <span>Skills</span>
+        </a>
+        <a href="#projects" class="bottom-nav-item">
+            <i class="fas fa-folder"></i>
+            <span>Projects</span>
+        </a>
+        <a href="#contact" class="bottom-nav-item">
+            <i class="fas fa-envelope"></i>
+            <span>Contact</span>
+        </a>
+    </nav>
 
     <script src="js/script.js"></script>
 </body>
