--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                 </div>
             </div>
             <div class="hero-image">
+                <div class="live-clock-hero">
+                    <div class="clock-time" id="liveTime2"></div>
+                    <div class="clock-date" id="liveDate2"></div>
+                </div>
                 <div class="hero-profile-pic" id="heroProfilePic">
                     <img src="images/profile.jpg" alt="Vivek V - Full Stack Developer & Generative AI Engineer">
                     <a href="https://linkedin.com/in/vivek-v-a0a41225a" target="_blank" class="open-to-work-badge">
