--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navbar -->
     <nav class="navbar" id="navbar">
         <div class="container nav-container">
-            <div class="logo">Vivek<span>.dev</span></div>
+            <div class="logo" id="animatedLogo"></div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -223,7 +223,9 @@
     <section class="projects" id="projects">
         <div class="container">
             <h2 class="section-title">Featured Projects</h2>
-            <div class="projects-grid">
+            <div class="projects-slider-wrapper">
+                <button class="slider-btn prev-btn" id="projectsPrev"><i class="fas fa-chevron-left"></i></button>
+                <div class="projects-grid" id="projectsSlider">
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-placeholder">
@@ -287,6 +289,35 @@
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-placeholder">
+                            <i class="fas fa-file-contract"></i>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>AI-Powered Document Verification System</h3>
+                        <p class="project-description">Intelligent document verification system using AI and machine learning to automate document authentication and fraud detection. Built with modern web technologies for seamless integration.</p>
+                        <ul class="project-features">
+                            <li>Implemented AI-based document analysis for authenticity verification</li>
+                            <li>Developed automated fraud detection algorithms with high accuracy</li>
+                            <li>Built secure document processing pipeline with encryption</li>
+                            <li>Created user-friendly interface for document upload and verification results</li>
+                        </ul>
+                        <div class="project-tech">
+                            <span>Python</span>
+                            <span>Machine Learning</span>
+                            <span>OpenCV</span>
+                            <span>Flask</span>
+                            <span>AI</span>
+                        </div>
+                        <p class="project-impact"><i class="fas fa-chart-line"></i> Automated document verification process reducing manual review time by 80%.</p>
+                        <div class="project-links">
+                            <a href="https://github.com/Vivek7892/AI-powered-document-verification-system-.git" class="btn-icon" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-placeholder">
                             <i class="fas fa-cloud-sun"></i>
                         </div>
                     </div>
@@ -313,6 +344,8 @@
                     </div>
                 </div>
             </div>
+            <button class="slider-btn next-btn" id="projectsNext"><i class="fas fa-chevron-right"></i></button>
+        </div>
         </div>
     </section>
 
