--- a/index.html
+++ b/index.html
@@ -593,7 +593,16 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2025 Vivek V. All rights reserved.</p>
+                <div class="footer-left">
+                    <p>&copy; 2025 Vivek V. All rights reserved.</p>
+                    <div class="footer-clock">
+                        <i class="fas fa-clock"></i>
+                        <span id="footerTime"></span>
+                        <span class="footer-divider">|</span>
+                        <i class="fas fa-calendar"></i>
+                        <span id="footerDate"></span>
+                    </div>
+                </div>
                 <div class="social-links">
                     <a href="https://linkedin.com/in/vivek-v-a0a41225a" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Vivek7892" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
@@ -609,10 +618,6 @@
 
     <!-- Fixed Social Sidebar -->
     <div class="social-sidebar">
-        <div class="social-sidebar-header">
-            <i class="fas fa-share-alt"></i>
-        </div>
-        <div class="social-sidebar-divider"></div>
         <a href="https://linkedin.com/in/vivek-v-a0a41225a" target="_blank" class="social-sidebar-link" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
         </a>
@@ -622,8 +627,8 @@
         <a href="mailto:vivekvvivekv70@gmail.com" class="social-sidebar-link" aria-label="Email">
             <i class="fas fa-envelope"></i>
         </a>
-        <a href="tel:+917892409872" class="social-sidebar-link" aria-label="Phone">
-            <i class="fas fa-phone"></i>
+        <a href="https://buymeacoffee.com/vivekvvivex" target="_blank" class="social-sidebar-link" aria-label="Buy Me a Coffee">
+            <i class="fas fa-coffee"></i>
         </a>
     </div>
 
