--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Vivek V - AI & Full Stack Developer | Final Year CSE Student specializing in AI, GenAI, and Full Stack Development">
    <meta name="google-site-verification" content="farR8TN9a8QL7v4Na5Z1lJsHxZyHfhbFk4RptYFS874" />
+   <meta name="description" content="Vivek V - Computer Science Student, Full Stack Developer, AI & RAG Chatbot Developer. View my projects, resume, and contact information." />
+    <meta name="description" content="Vivek V - Computer Science Student, Full Stack Developer, AI & RAG Chatbot Developer. View my projects, resume, and contact information." />
     <meta name="keywords" content="AI Developer, Full Stack Developer, Machine Learning, RAG Chatbots, Portfolio">
     <meta name="author" content="Vivek V">
     <title>VIVEK V</title>
