--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
    <meta name="google-site-verification" content="farR8TN9a8QL7v4Na5Z1lJsHxZyHfhbFk4RptYFS874" />
    <meta name="description" content="Vivek V - Computer Science Student, Full Stack Developer, AI & RAG Chatbot Developer. View my projects, resume, and contact information." />
     <meta name="description" content="Vivek V - Computer Science Student, Full Stack Developer, AI & RAG Chatbot Developer. View my projects, resume, and contact information." />
-    <meta name="keywords" content="AI Developer, Full Stack Developer, Machine Learning, RAG Chatbots, Portfolio">
+    <meta name="keywords" content="AI Developer, Full Stack Developer, Machine Learning, Portfolio">
+    <meta name="description" content="Vivek V - Frontend Developer and AI Student. Portfolio includes Flutter apps, Student Chatbot, AI Document Verification and Web Development projects.">
+<meta name="keywords" content="Vivek V, vivek7892, frontend developer portfolio, flutter developer, AI chatbot, student chatbot project, web developer India">
+<meta name="author" content="Vivek V">
+
     <meta name="author" content="Vivek V">
-    <title>VIVEK V</title>
+    <title>Vivek V|Frontend Developer |Portfolio</title>
+
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <!-- Google Fonts - Professional Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
