--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="author" content="Vivek V">
 
     <meta name="author" content="Vivek V">
-    <title>Vivek V|Frontend Developer |Portfolio</title>
+    <title>Vivek V</title>
 
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <!-- Google Fonts - Professional Typography -->
