--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <meta name="author" content="Vivek V">
     <title>Vivek V</title>
+    <meta property="og:title" content="Vivek V Portfolio">
+    <meta property="og:image" content="https://vivek7892.github.io/profile.jpg">
+    <meta property="og:url" content="https://vivek7892.github.io/">
+    <meta property="og:type" content="website">
 
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <!-- Google Fonts - Professional Typography -->
@@ -31,6 +35,26 @@
       gtag('js', new Date());
       gtag('config', 'YOUR_GA_ID');
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Vivek V",
+  "url": "https://vivek7892.github.io/",
+  "image": "https://vivek7892.github.io/vivek-v.jpg",
+  "sameAs": [
+    "https://github.com/vivek7892",
+    "https://www.linkedin.com/in/vivek-v-a0a41225a",
+    "https://x.com/vivekv2004"
+  ],
+  "jobTitle": "AI & Web Developer",
+  "alumniOf": {
+    "@type": "CollegeOrUniversity",
+    "name": "ATME College of Engineering, Mysuru"
+  }
+}
+</script>
+
 </head>
 <body>
     <!-- Navbar -->
