--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
       gtag('js', new Date());
       gtag('config', 'YOUR_GA_ID');
     </script>
+    <script>
+    var email = "vivek" + "7892" + "@gmail.com";
+    document.write(email);
+        </script>
+
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -655,6 +660,9 @@
         </a>
         <a href="https://github.com/Vivek7892" target="_blank" class="social-sidebar-link" aria-label="GitHub">
             <i class="fab fa-github"></i>
+        </a>
+        <a href ="https://wa.me/917892409872?text=Hello%20Vivek,%20I%20visited%20your%20portfolio " target="_blank" class="social-sidebar-link" aria-label="Twitter">
+            <i class="fab fa-whatsapp"></i>
         </a>
         <a href="mailto:vivekvvivekv70@gmail.com" class="social-sidebar-link" aria-label="Email">
             <i class="fas fa-envelope"></i>
