--- a/index.html
+++ b/index.html
@@ -90,17 +90,18 @@
                     <span></span>
                 </button>
             </div>
+        </div>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">👋 Hello, I'm <span class="gradient-text">Vivek</span></h1>
+                <h1 class="hero-title">Hello, I'm <span class="gradient-text">Vivek</span></h1>
                 <h2 class="hero-subtitle">Full Stack Developer</h2>
                 <p class="hero-typing">I build <span id="typingText" class="typing-text"></span><span class="typing-cursor">|</span></p>
-                <p class="hero-tagline">Building production-ready MERN applications with intelligent AI capabilities and Python Full stack development.<br>Specializing in Full Stack Applications development</p>
-                <p class="hero-description">Experienced in developing scalable web applications using React, Node.js, and MongoDB. Expert in implementing Full stack Development. Proficient in building cross-platform mobile apps with Flutter.</p>
+                <p class="hero-tagline">Building production-ready MERN applications with practical AI capabilities.<br>Specializing in full stack application development.</p>
+                <p class="hero-description">Experienced in developing scalable web applications using React, Node.js, and MongoDB. Proficient in integrating AI features and building cross-platform mobile apps with Flutter.</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary"><i class="fas fa-code"></i> View Projects</a>
                     <a href="resume/VIVEK V.pdf" class="btn-resume-glow" download="VIVEK_V_Resume.pdf"><i class="fas fa-download"></i> Download Resume</a>
@@ -681,7 +682,7 @@
             <i class="fas fa-code"></i>
             <span>Skills</span>
         </a>
-        <a href="#projects" class="bottom-nav-item">
+        <a href="project.html" class="bottom-nav-item">
             <i class="fas fa-folder"></i>
             <span>Projects</span>
         </a>
@@ -713,4 +714,3 @@
 
 </body>
 </html>
-
