--- a/project.html
+++ b/project.html
@@ -60,6 +60,25 @@
             text-decoration: underline;
         }
 
+        .back-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.45rem 0.85rem;
+            border-radius: 8px;
+            border: 1px solid var(--border);
+            color: var(--text);
+            background: var(--card);
+            text-decoration: none;
+            font-size: 0.9rem;
+            cursor: pointer;
+        }
+
+        .back-btn:hover {
+            border-color: var(--accent);
+            color: var(--accent);
+        }
+
         h1 {
             font-size: 2rem;
             margin-bottom: 0.4rem;
@@ -134,7 +153,7 @@
 <body>
     <div class="container">
         <div class="top-links">
-            <a href="index.html#projects">Back to Portfolio Projects</a>
+            <button class="back-btn" id="backBtn" type="button">Back</button>
             <a href="index.html" target="_blank" rel="noopener noreferrer">Open Full Portfolio</a>
         </div>
 
@@ -236,6 +255,17 @@
                 document.documentElement.setAttribute('data-theme', event.newValue || 'light');
             }
         });
+
+        const backBtn = document.getElementById('backBtn');
+        if (backBtn) {
+            backBtn.addEventListener('click', () => {
+                if (window.history.length > 1) {
+                    window.history.back();
+                } else {
+                    window.location.href = 'index.html';
+                }
+            });
+        }
     </script>
 </body>
 </html>
